[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zza"
dynamic = ["version"]
description = "An alternative standard library for Python"
readme = "README.md"
authors = [{ name = "Sam Roedger", email = "sroedger@gmail.com" }]
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = ["hatch>=1.14.0", "hatchling>=1.27.0", "ruff>=0.9.7"]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.6.5"]

[tool.hatch.version]
path = "src/zza/__init__.py"

[tool.hatch.build.targets]
sdist.packages = ["src/zza"]
wheel.packages = ["src/zza"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://pypi.org/legacy/"

[[tool.uv.index]]
name = "test"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
